--- a/ZaimaCSS/zaima-chrome61.css
+++ b/ZaimaCSS/zaima-chrome61.css
@@ -113,14 +113,13 @@ ruby.row6 rt span {
 .red-base rb { color: red;}
 
 /* the following are optimized for font-size: 50px */
-.row1ex, .row2ex, .row3ex, .row4ex, .row4ex, .row5ex { left: 0px; position: absolute; }
+.row1ex, .row2ex, .row3ex, .row4ex, .row4ex, .row5ex { position: absolute; }
 .row2ex rb, .row3ex rb, .row4ex rb, .row5ex rb { visibility: hidden; }
 .row1ex { z-index: 1;  bottom:   0px; }
 .row2ex { z-index: 2;  bottom:  25px; }
 .row3ex { z-index: 3;  bottom:  50px; }
 .row4ex { z-index: 4;  bottom:  75px; }
 .row5ex { z-index: 5;  bottom: 100px; }
-
 
 
 .difat_difat_ex {
